# sudoers-audit

./: .gitignore  Dockerfile  README.md  dummy_sudoers  pyproject.toml  report.csv  report.html  report.sarif  verify_fix.py
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  codeql.yml  docker-image.yml
scripts/: build_binary.py  entry_point.py
src/sudoers_audit/: __init__.py  auditor.py  cli.py  data.py  reporting.py  utils.py
src/sudoers_audit/rules/: __init__.py  base.py  commands.py  defaults.py  environment.py  permissions.py  privileges.py  risky_binaries.py
tests/: test_auditor.py  test_cli.py  test_hardening.py  test_parsing.py  test_reporting.py  test_vectors.py
tests/data/: clean.sudoers  malicious_mixed.sudoers  malicious_nopasswd.sudoers  risky_bins_regression.sudoers
tests/data/scan_dir/: clean.sudoers  malicious.sudoers  malicious_all_cmd.sudoers  malicious_gtfobins.sudoers  malicious_wildcard.sudoers
