[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sudoers-audit"
version = "0.1.0"
description = "Audit sudoers files for security risks"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
sudoers-audit = "sudoers_audit.cli:main"

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["tests"]
